views: support Mac textfield-focus behavior

On Mac, textfields always scroll to the start when gaining or losing focus;
this change implements that by:

1) On keyboard focus, doing a reversed SelectAll, so that the new selection
   "ends" at the logical start on Mac;
2) In OnBlur(), moving the selection to the logical start if PlatformStyle
   calls for same

Bug: 657558
Change-Id: I81c01f6ae5a546f1abb51a28638091907379d04e
Reviewed-on: https://chromium-review.googlesource.com/598122
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#491723}
Former-commit-id: fa2d40dd48636a51389970a21eb1dce68dd506b0